--- a/README
+++ b/README
@@ -2,11 +2,10 @@ How to get the rms_UDP.py to run on Mac OS:
 
 Install all the dependencies:
 
-1. apt-get install libglib2.0-dev
-2. apt-get install python3-pip
-3. pip3 install carreralib
-4. pip3 install pyqt5
-5. Install the latest XCode
+1. Download and install the latest python Version from python.org for OS X  I used 3.8.2 to develop the app.
+2. pip3 install carreralib
+3. pip3 install pyqt5
+4. Install the latest XCode
 
 Create a new project in XCode and add main.swift and ServerConnection.swift to the project
 Compile and start the Bluetooth Network Server
